--- a/src/components/Modern/components/projectsmodern.css
+++ b/src/components/Modern/components/projectsmodern.css
@@ -1,5 +1,5 @@
 #cardsallmodern {
-  width: 85%;
+  width: 55%;
   height: 100%;
   margin: 10px;
   display: grid;
